--- a/index.html
+++ b/index.html
@@ -1,31 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário Guituro</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aprenda a Criar um Site - Estilo Apple</title>
+  <style>
+    /* ======= Estilo Apple-like ======= */
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+      background-color: #fff;
+      color: #1d1d1f;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+      font-size: 18px;
+      letter-spacing: 1px;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px;
+      background-color: #f5f5f7;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 20px;
+      color: #555;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    .section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    .section h2 {
+      font-size: 32px;
+      font-weight: 500;
+      margin-bottom: 20px;
+    }
+
+    .section p {
+      font-size: 18px;
+      color: #555;
+      line-height: 1.6;
+    }
+
+    .section img {
+      width: 80%;
+      max-width: 600px;
+      border-radius: 12px;
+      margin-top: 30px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      background-color: #f5f5f7;
+      font-size: 14px;
+      color: #6e6e73;
+    }
+
+    code {
+      background: #f0f0f0;
+      padding: 3px 6px;
+      border-radius: 4px;
+      font-family: monospace;
+    }
+  </style>
 </head>
 <body>
-    <h1>Formulário</h1>
-    <p>Esse formulário é sobre como criar sites do zero, sem usar IA e programando.</p> 
 
-    <h2>Estrutura Básica do HTML</h2>
-    <p>O HTML começa com <code>&lt;!DOCTYPE html&gt;</code>.</p>
-    <p>Dentro da tag <code>&lt;html&gt;</code>, há duas seções principais:</p>
-    <ul>
-        <li><strong>Cabeçalho (<code>&lt;head&gt;</code>):</strong> onde ficam o título e links para CSS/JS.</li>
-        <li><strong>Corpo (<code>&lt;body&gt;</code>):</strong> onde fica o conteúdo visível da página.</li>
-    </ul>
+  <header>
+    🍏 Aprenda a Criar um Site — Estilo Apple
+  </header>
 
-    <h2>Elementos Comuns</h2>
-    <ul>
-        <li>Parágrafos: <code>&lt;p&gt;</code></li>
-        <li>Cabeçalhos: <code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, etc.</li>
-        <li>Links: <code>&lt;a href="URL"&gt;Texto&lt;/a&gt;</code></li>
-        <li>Imagens: <code>&lt;img src="caminho" alt="descrição"&gt;</code></li>
-    </ul>
+  <section class="hero">
+    <h1>Crie seu próprio site.</h1>
+    <p>Aprenda, passo a passo, como construir um site do zero usando apenas HTML, CSS e um pouco de criatividade. Minimalista. Bonito. Feito por você.</p>
+  </section>
 
-    <h2>Exemplo de Imagem</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Manoel_Gomes_em_2023.jpg" alt="Manoel Gomes" width="300">
+  <section class="section">
+    <h2>1. Estrutura Básica do HTML</h2>
+    <p>Todo site começa com a estrutura do HTML. Use o código abaixo como base:</p>
+    <p><code>&lt;!DOCTYPE html&gt;</code> define o tipo de documento.</p>
+    <p>Dentro de <code>&lt;html&gt;</code>, temos o <code>&lt;head&gt;</code> (configurações) e o <code>&lt;body&gt;</code> (conteúdo).</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="Logo HTML5">
+  </section>
+
+  <section class="section">
+    <h2>2. Adicionando Conteúdo</h2>
+    <p>Use tags como <code>&lt;h1&gt;</code> para títulos, <code>&lt;p&gt;</code> para textos e <code>&lt;a&gt;</code> para links.  
+      Aqui vai um exemplo:</p>
+    <p><code>&lt;h1&gt;Bem-vindo ao meu site&lt;/h1&gt;<br>&lt;p&gt;Este é o meu primeiro parágrafo.&lt;/p&gt;</code></p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/800px-CSS3_logo_and_wordmark.svg.png" alt="Logo CSS3">
+  </section>
+
+  <section class="section">
+    <h2>3. Deixe Bonito com CSS</h2>
+    <p>O CSS define as cores, fontes e espaçamento.  
+      Você pode escrever dentro da tag <code>&lt;style&gt;</code> ou em um arquivo separado.</p>
+    <p><code>
+      body { background-color: #fff; color: #333; font-family: Arial; }<br>
+      h1 { color: #000; }
+    </code></p>
+  </section>
+
+  <section class="section">
+    <h2>4. Publicando seu Site</h2>
+    <p>Quando estiver pronto, envie seu site para a internet usando serviços como GitHub Pages, Netlify ou Vercel.  
+      Assim, o mundo inteiro poderá ver sua criação.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Netlify_logo.svg" alt="Logo Netlify">
+  </section>
+
+  <footer>
+    © 2025 Aprenda a Criar um Site — Inspirado no design da Apple.
+  </footer>
+
 </body>
 </html>
